--- a/src/components/hb-canvas/hb-canvas.scss
+++ b/src/components/hb-canvas/hb-canvas.scss
@@ -3,6 +3,7 @@
 :host {
   display: block;
   position: relative;
+  max-width: 100%;
 }
 
 canvas {
